<resources>
    <string name="app_name">Offer Me</string>
    <string name="your_web_client_id">1065024084271-4hkm2cj0m412q5ipai1uokp5m8nsg83a.apps.googleusercontent.com</string>
    <string name="title_activity_home">HomeActivity</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_bookmarks">Bookmarks</string>
    <string name="Login_btn_Value">Login</string>
    <string name="Login_title">Login</string>
    <string name="edtEmail">Email or Phone</string>
    <string name="edtEmailHint_value">Email or Phone</string>
    <string name="password_hint_value">Password</string>
    <string name="edtEmail_Hint_value">Email or Phone</string>
    <string name="edtPassword_Hint_value">Password</string>
    <string name="forget_pswrd_value">Forget password?</string>
    <string name="dont_have_acc_value">Don\'t have an account?</string>
    <string name="register_text_value">Register</string>
    <string name="or_text">Or</string>
    <string name="Fb_Login_btn_Value">Login with facebook</string>
    <string name="ggl_Login_btn_Value">Login with google</string>
    <string name="searchBarHint">Search for more offers</string>
    <string name="descriptionNotFoundText">Description not found!!!</string>
    <string name="dateNotMentionedText">Valid date not found</string>
    <string name="invalidNameText">Valid name not found</string>
    <string name="titleBookMark">Bookmarks</string>
=======
    <string name="Register_title">Register</string>
    <string name="edtUsename_Hint_value">Username</string>
    <string name="RegEmail_Hint_value">Email</string>
    <string name="edtPhone_Hint_value">Phone number</string>
    <string name="edtPwd1_Hint_value">Password</string>
    <string name="edtPwd2_Hint_value">Confirm password</string>
    <string name="Submit_btn_Value">Submit</string>
    <string name="have_acc_value">Have an account?</string>
    <string name="reglog_text_value">Log in here.</string>
    <string name="My_account">Malith Dilshan</string>
    <string name="Acc_btn_Value">My Account</string>
    <string name="Req_btn_Value">My Request</string>
    <string name="Not_btn_Value">Notifications</string>
    <string name="Llogout_btn_Value">Log Out</string>
    <string name="Accsettings_title">Account Settings</string>
    <string name="youremailvalue">YOUR EMAIL</string>
    <string name="Update_btn_Value">Save Details</string>
    <string name="Delete_btn_Value">Delete Account</string>
    <string name="Yourtotaloffers">Your total offers</string>
    <string name="Activeoffers">Active offers</string>
    <string name="offerTtlValue">26</string>
    <string name="offerValue">5</string>
    <string name="YourtotalReq">Your Total Request</string>
    <string name="TtlResponse">Total Response</string>
    <string name="reqValue">54</string>
    <string name="resValue">6</string>
    <string name="item_lable" />
    >>>>>>> 245cdcdc37e7763bd25f3cf341e221a095eb921c


<!--    offer managent -->
<!--    <string name="app_name">Add Your Offer</string>-->
    <string name="selectDropdown">Select Category</string>
    <string name="spnDropdown">Select Category</string>
    <string name="txtItemName">Item Name</string>
    <string name="txtItem">Item Name</string>
    <string name="txtAboutItem">About Your Item</string>
    <string name="btnStartDate">Start Date</string>
    <string name="btnEndDate">End Date</string>
    <string name="txtPrice">Value of Item</string>
    <string name="txtOffer">Offer Percentage</string>
    <string name="btnImage">Add Images</string>
    <string name="btnLocation">Shop Location</string>
    <string name="txtLocation">Shop Location</string>
    <string name="txtTitle">LED TV</string>
    <string name="txtValue">Rs.87000.00</string>
    <string name="txtOfferPrice">RS.79000.00</string>
    <string name="txtInfo">Offered Price</string>
    <string name="txtitem">LED TV</string>
    <string name="btnEdit">Edite</string>
    <string name="checkBoxDelete">Confirm Delete</string>
    <string name="btnDelete">Delete Offer</string>
    <string name="Delete">btnDeleteOffer</string>
    <string name="btnDeleteOffer">Delete</string>
    <string name="btnUpdateOffer">Edite</string>
    <string-array name="spinner_data">Select Category
        <item>Computer Accessories</item>
        <item>Automitie and Motorbke</item>
        <item>Electronic Accesories</item>
        <item>Home and lifeStyles </item>
    </string-array>

    <!--    __________end__________-->


</resources>