<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    tools:context=".Register">

    <TextView
        android:textAlignment="center"
        android:textSize="@dimen/titleTextsize"
        android:textStyle="bold"
        android:textColor="@color/titleColor"
        android:id="@+id/registerTittle"
        android:text="@string/Register_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/marginLeftSize"
        android:layout_marginRight="@dimen/marginLeftSize"/>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/textInputLayout1"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="match_parent"
        android:layout_height="@dimen/height56"
        android:layout_marginLeft="@dimen/marginLeftSize"
        android:layout_marginTop="@dimen/margin32"
        android:layout_marginRight="@dimen/marginLeftSize"
        android:textColorHint="@color/loginPageinputcolor"
        app:boxStrokeColor="@color/text_input_color"
        app:hintTextColor="@color/loginPageinputcolor"
        tools:ignore="InvalidId">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/edtUsername"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/edtUsename_Hint_value"
            android:inputType="text" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/textInputLayout2"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="match_parent"
        android:layout_height="@dimen/height56"
        android:layout_marginLeft="@dimen/marginLeftSize"
        android:layout_marginTop="@dimen/marginLeftSize"
        android:layout_marginRight="@dimen/marginLeftSize"
        android:textColorHint="@color/loginPageinputcolor"
        app:boxStrokeColor="@color/text_input_color"
        app:hintTextColor="@color/loginPageinputcolor"
        tools:ignore="InvalidId">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/edtRegEmail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/RegEmail_Hint_value"
            android:inputType="textEmailAddress" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/textInputLayout3"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="match_parent"
        android:layout_height="@dimen/height56"
        android:layout_marginLeft="@dimen/marginLeftSize"
        android:layout_marginTop="@dimen/marginLeftSize"
        android:layout_marginRight="@dimen/marginLeftSize"
        android:textColorHint="@color/loginPageinputcolor"
        app:boxStrokeColor="@color/text_input_color"
        app:hintTextColor="@color/loginPageinputcolor"
        tools:ignore="InvalidId">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/edtRegPhone"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/edtPhone_Hint_value"
            android:inputType="phone" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/textInputLayout4"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="match_parent"
        android:layout_height="@dimen/height56"
        android:layout_marginLeft="@dimen/marginLeftSize"
        android:layout_marginTop="@dimen/marginLeftSize"
        android:layout_marginRight="@dimen/marginLeftSize"
        android:textColorHint="@color/loginPageinputcolor"
        app:boxStrokeColor="@color/text_input_color"
        app:hintTextColor="@color/loginPageinputcolor"
        tools:ignore="InvalidId">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/edtRegPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/edtPwd1_Hint_value"
            android:inputType="textPassword" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/textInputLayout5"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="match_parent"
        android:layout_height="@dimen/height56"
        android:layout_marginLeft="@dimen/marginLeftSize"
        android:layout_marginTop="@dimen/marginLeftSize"
        android:layout_marginRight="@dimen/marginLeftSize"
        android:textColorHint="@color/loginPageinputcolor"
        app:boxStrokeColor="@color/text_input_color"
        app:hintTextColor="@color/loginPageinputcolor"
        tools:ignore="InvalidId">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/edtConfirmPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/edtPwd2_Hint_value"
            android:inputType="textPassword" />
    </com.google.android.material.textfield.TextInputLayout>

    <Button
        android:id="@+id/regButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/marginLeftSize"
        android:layout_marginTop="@dimen/margin32"
        android:layout_marginRight="@dimen/marginLeftSize"
        android:backgroundTint="@color/secondaryColor"
        android:onClick="submit"
        android:text="@string/Submit_btn_Value"
        android:textAllCaps="false"
        android:textColor="@color/login_btn_text_color"
        android:textSize="@dimen/btnText24"
        android:textStyle="bold" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center_horizontal">


        <TextView
            android:id="@+id/haveacc_text"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:textAlignment="center"
            android:textColor="@color/dnthaveacccolor"
            android:layout_marginTop="@dimen/marginLeftSize"
            android:layout_marginLeft="@dimen/marginLeftSize"
            android:text="@string/have_acc_value"/>

        <TextView
            android:id="@+id/login_text"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:textAlignment="center"
            android:textColor="@color/fgtpwcolor"
            android:layout_marginTop="@dimen/marginLeftSize"
            android:layout_marginRight="@dimen/marginLeftSize"
            android:text="@string/reglog_text_value"/>

    </LinearLayout>

    <Button
        android:id="@+id/loginWithFb"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin32"
        android:layout_marginLeft="@dimen/marginLeftSize"
        android:layout_marginRight="@dimen/marginLeftSize"
        android:backgroundTint="@color/fbBtnColor"
        android:textAllCaps="false"
        android:drawableLeft="@drawable/icons8_facebook_44"
        android:textColor="@color/login_btn_text_color"
        android:text="@string/Fb_Login_btn_Value" />

    <Button
        android:id="@+id/loginWithGoogle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/marginLeftSize"
        android:layout_marginLeft="@dimen/marginLeftSize"
        android:layout_marginRight="@dimen/marginLeftSize"
        android:backgroundTint="@color/ggl_log_color"
        android:onClick="click"
        android:textAllCaps="false"
        android:drawableLeft="@drawable/icons8_google_44"
        android:textColor="@color/ggllogbtncolor"
        android:text="@string/ggl_Login_btn_Value" />

</LinearLayout>