<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/scroll"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".EditeOfferActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">


        <Spinner
            android:id="@+id/spinner"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_margin="@dimen/lay_margin1"
            android:entries="@array/spinner_data" />



        <com.google.android.material.textfield.TextInputLayout
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/lay_margin2">

            <AutoCompleteTextView
                android:id="@+id/nameInput"
                android:layout_width="match_parent"
                android:layout_height="@dimen/lay_marginHeight1"
                android:ems="10"
                android:hint="@string/txtItem"
                android:inputType="textPersonName"
                android:padding="@dimen/pading"
                android:textAlignment="center" />

        </com.google.android.material.textfield.TextInputLayout>


        <com.google.android.material.textfield.TextInputLayout
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/lay_margin3">

            <EditText
                android:id="@+id/detailsInput"
                android:layout_width="match_parent"
                android:layout_height="70dp"
                android:ems="10"
                android:gravity="start|top"
                android:hint="@string/txtAboutItem"
                android:inputType="textMultiLine"
                android:padding="@dimen/padding" />

        </com.google.android.material.textfield.TextInputLayout>


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="@dimen/lay_marginHeight4"
            android:layout_marginTop="@dimen/lay_marginTop"
            android:layout_marginBottom="@dimen/lay_marginBottom1"
            android:orientation="horizontal">

            <EditText
                android:id="@+id/startInput"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:ems="10"
                android:gravity="center"
                android:hint="startDate"
                android:inputType="date" />

            <EditText
                android:id="@+id/endInput"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:ems="10"
                android:gravity="center"
                android:hint="endDate"
                android:inputType="date" />
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="@dimen/lay_marginHeight4"
            android:layout_marginTop="@dimen/lay_marginTop"
            android:layout_marginBottom="@dimen/lay_marginBottom1"
            android:orientation="horizontal">

            <Button
                android:id="@+id/startDateBtn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:layout_weight="1"
                android:backgroundTint="#FDC500"
                android:text="startDate" />

            <Button
                android:id="@+id/endDateBtn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:layout_weight="1"
                android:backgroundTint="#FDC500"
                android:text="End date" />
        </LinearLayout>

        <com.google.android.material.textfield.TextInputLayout
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/lay_margin">

            <EditText
                android:id="@+id/priceInput"
                android:layout_width="match_parent"
                android:layout_height="@dimen/lay_Height"
                android:ems="10"
                android:hint="@string/txtPrice"
                android:inputType="textPersonName"
                android:padding="@dimen/padding" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/lay_margin">

            <EditText
                android:id="@+id/percentageInput"
                android:layout_width="match_parent"
                android:layout_height="@dimen/lay_marginHeight1"
                android:ems="10"
                android:hint="@string/txtOffer"
                android:inputType="textPersonName"
                android:padding="@dimen/padding" />

        </com.google.android.material.textfield.TextInputLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="@dimen/lay_marginHeight1"
            android:orientation="horizontal">

            <Button
                android:id="@+id/offerImageSelecter"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/lay_marginLeft"
                android:layout_marginRight="@dimen/lay_marginRight"
                android:layout_weight="1"
                android:backgroundTint="#FDC500"
                android:text="@string/btnImage" />

        </LinearLayout>


        <com.google.android.material.textfield.TextInputLayout
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/lay_margin">

            <EditText
                android:id="@+id/locationInput"
                android:layout_width="match_parent"
                android:layout_height="@dimen/lay_marginHeight1"
                android:ems="10"
                android:hint="@string/txtLocation"
                android:inputType="textPersonName"
                android:padding="@dimen/padding" />

        </com.google.android.material.textfield.TextInputLayout>

        <Button
            android:id="@+id/addItemButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/lay_marginLeft3"
            android:layout_marginTop="@dimen/lay_marginTop"
            android:layout_marginRight="@dimen/lay_marginLeft3"
            android:backgroundTint="#FDC500"
            android:text="Submit" />



    </LinearLayout>
</ScrollView>